--- a/src/app/home/confirm-entrega/confirm-entrega.component.html
+++ b/src/app/home/confirm-entrega/confirm-entrega.component.html
@@ -50,23 +50,23 @@
              <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
                 <td style='text-align: center;'>{{i + 1}}</td>
                 <td>{{item.descricao}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorUnitario | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'>{{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
                 <td style='text-align: center;'>{{item.qde}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorTotal | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
              </tr> 
              <tr height="20" style='border-bottom:1px solid #ccc;'>
                 <td  colspan='4'><b>Valor Total</b></td>
-                <td style='text-align: right;padding-right:5px'> <b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'> <b> {{pedido.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                 
             <tr>
             <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
                 <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal - pedido.valorLiquido | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal - pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                    
             </tr> 
             <tr height="20" *ngIf="pedido.desconto > 0">
                 <td colspan='4'><b>Valor Total Líquido</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorLiquido | number : '1.2-2'}}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</b></td>
                     
             </tr>      
         </table>
@@ -74,7 +74,7 @@
     </div>    
     <br>
     <br>
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> R$ {{totalEntrega | number : '1.2-2' }}</div>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> {{totalEntrega |currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
 
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
 
