--- a/src/app/home/entregas/entregas.component.html
+++ b/src/app/home/entregas/entregas.component.html
@@ -38,23 +38,23 @@
              <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
                 <td style='text-align: center;'>{{i + 1}}</td>
                 <td>{{item.descricao}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorUnitario | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
                 <td style='text-align: center;'>{{item.qde}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorTotal | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
              </tr> 
              <tr height="20" style='border-bottom:1px solid #ccc;'>
                 <td  colspan='4'><b>Valor Total</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                 
             <tr>
             <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
                 <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal - pedido.valorLiquido | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal - pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                    
             </tr> 
             <tr height="20" *ngIf="pedido.desconto > 0">
                 <td colspan='4'><b>Valor Total Líquido</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorLiquido | number : '1.2-2'}}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</b></td>
                     
             </tr>      
         </table>
@@ -62,7 +62,7 @@
     </div>    
     <br>
     <br>
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> R$ {{totalEntregaSelecionada | number : '1.2-2' }}</div>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> {{totalEntregaSelecionada | currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
     <div *ngIf="!entregaSelecionada.recebedor">
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
 
@@ -103,18 +103,18 @@
                     <tr *ngFor="let pedido of entrega.pedidos">
                        <td width='20%'>{{pedido.id}}</td>
                        <td width='50%'>{{pedido.nomePaciente}}</td>
-                       <td style='text-align:right'>R$ {{pedido.valorLiquido | number : '1.2-2'}}</td>        
+                       <td style='text-align:right'> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>        
                     </tr>    
                 </table>  
 
             </td>
-            <td *ngIf="clinica.id == entrega.clinicaId" width='20%' style='text-align: right'>{{entrega.totalEntrega | number : '1.2-2'}}</td>
+            <td *ngIf="clinica.id == entrega.clinicaId" width='20%' style='text-align: right'>{{entrega.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
             <td *ngIf="clinica.id == entrega.clinicaId" width='20%' style='text-align: center;'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>
           
             </tr> 
             <tr>
                 <td colspan='2' ><b>Total Fechamento</b></td>    
-                <td style='text-align:right'>{{totalFechamento | number : '1.2-2'}}</td>
+                <td style='text-align:right'>{{totalFechamento | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
                 <td></td>
             </tr>    
          </table>
@@ -166,18 +166,18 @@
         <table class='table table-hover'>
             <tr *ngFor="let entrega of entregas">
                 <td *ngIf="entrega.clinicaId == clinica.id" width="5%">{{entrega.id}}</td>
-                <td *ngIf="entrega.clinicaId == clinica.id" width="5%"><i class="material-icons" style="cursor:pointer" (click)="abreModalEntrega(entrega.id,clinica.nomeSimp )"> assignment</i></td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width="5%"><i class="material-icons" style="cursor:pointer" (click)="abreModalEntrega(entrega.id,clinica.nomeSimp )" title='Nota de entrega nº {{entrega.id}}'> assignment</i></td>
                 <td *ngIf="entrega.clinicaId == clinica.id" width='10%'>{{entrega.dataEmissao | date:'dd/MM/yyyy'}}</td>
                 <td *ngIf="entrega.clinicaId == clinica.id" width='25%'>
                       <table class='table table-sm table-bordered' style='font-size:12px' width="90%">
                           <tr *ngFor="let pedido of entrega.pedidos" height='20'>
                              <td width='20%'>{{pedido.id}}</td>
                              <td width='50%'>{{pedido.nomePaciente}}</td>
-                             <td style='text-align:right'>R$ {{pedido.valorLiquido | number : '1.2-2'}}</td>        
+                             <td style='text-align:right'> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>        
                           </tr>    
                       </table>      
                 </td>
-                <td *ngIf="entrega.clinicaId == clinica.id" style='text-align: right;' width='10%'>R$ {{entrega.totalEntrega | number : '1.2-2'}}</td>
+                <td *ngIf="entrega.clinicaId == clinica.id" style='text-align: right;' width='10%'>R$ {{entrega.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
                 <td *ngIf="entrega.clinicaId == clinica.id" width='20%' style='text-align:center'>
                     <div [ngStyle]="{'display':entrega.recebedor ? '' : 'none' }" id='dataComRecebedor_{{entrega.id}}'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</div>
                     <div [ngStyle]="{'display':entrega.recebedor ? 'none' : '' }" id='dataSemRecebedor_{{entrega.id}}'><input type='date' id='dataRecebedor_{{entrega.id}}' [value]='dadosIniciais.dataHoje' class='form-control'></div>
