--- a/src/app/home/fechamentos/fechamentos.component.html
+++ b/src/app/home/fechamentos/fechamentos.component.html
@@ -18,19 +18,19 @@
     <table class='table table-hover'>
         <tr *ngFor="let fechamento of fechamentos">
             <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'>{{fechamento.id}}</td>
-            <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'><i class="material-icons" style="cursor:pointer" title='Nota de Fechamento {{fechamento.id}}' (click)="abreModalFechamento(fechamento.id, clinica.nomeSimp)"> assignment</i></td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'><i class="material-icons" style="cursor:pointer" title='Nota de Fechamento nº {{fechamento.id}}' (click)="abreModalFechamento(fechamento.id, clinica.nomeSimp)"> assignment</i></td>
             <td *ngIf="fechamento.clinicaId == clinica.id" width="20%" style='text-align:center'>{{fechamento.dataFechamento | date:'dd/MM/yyyy'}}</td>
-            <td *ngIf="fechamento.clinicaId == clinica.id" width="20%" style='text-align:right'>{{fechamento.valorTotal | number : '1.2-2' }}</td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="20%" style='text-align:right'>{{fechamento.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</td>
             <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'><i class="material-icons" style='cursor: pointer;' title='Inserção e consulta de pagamentos' (click)="abreModalPagamento(fechamento.id, cadastroPagamento)">note_add </i></td>
-            <td *ngIf="fechamento.clinicaId == clinica.id" width="15%" style='text-align:right'><div id='divValorPago_{{fechamento.id}}'>{{fechamento.valorPago | number : '1.2-2' }}</div></td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="15%" style='text-align:right'><div id='divValorPago_{{fechamento.id}}'>{{fechamento.valorPgto | currency:'BRL':'symbol':'0.2-2':'pt' }}</div></td>
             <td *ngIf="fechamento.clinicaId == clinica.id" width="30%" style='text-align:center'>
                 <table class='table table-sm table-bordered' style='font-size:12px' width="280px">
                     <tr *ngFor='let entrega of fechamento.entregas '>
-                        <td width='10%' style='text-align:center;cursor:pointer;'  title='Nota de Entrega {{entrega.id}}' (click)="abreModalEntrega(fechamento.id, entrega.id, clinica.nomeSimp)"><i class="material-icons" style='font-size:12px'>search </i></td>
+                        <td width='10%' style='text-align:center;cursor:pointer;'  title='Nota de Entrega nº {{entrega.id}}' (click)="abreModalEntrega(fechamento.id, entrega.id, clinica.nomeSimp)"><i class="material-icons" style='font-size:12px'>search </i></td>
 
                         <td width='10%' style='text-align:center'>{{entrega.id}}</td>
                         <td width='40%' style='text-align:center'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>
-                        <td width='40%' style='text-align:center'> {{entrega.totalEntrega | number : '1.2-2'}}</td>
+                        <td width='40%' style='text-align:center'> {{entrega.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
 
                     </tr>    
                 </table>    
@@ -68,14 +68,14 @@
              <td style='text-align:center'>{{entrega.id}}</td>
              <td style='text-align:center'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>  
              <td style='text-align: center;'>
-                R$ {{entrega.totalEntrega | number : '1.2-2'}}
+                 {{entrega.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt'}}
             </td>  
              <td style='padding: 10px;'>
                 <table class='table table-sm table-bordered' style='font-size:12px;' width="250px">
                     <tr *ngFor="let pedido of entrega.pedidos">
                        <td width='20%'>{{pedido.id}}</td>
                        <td width='40%'>{{pedido.nomePaciente}}</td>
-                       <td style='text-align:right'>R$ {{pedido.valorLiquido | number : '1.2-2'}}</td>        
+                       <td style='text-align:right'>{{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>        
                     </tr>    
                 </table>   
 
@@ -84,7 +84,7 @@
          </tr>
     </table>
 <br>    
-<p style='text-align:center;font-family: Arial, Helvetica, sans-serif;'><b>Valor Total do Fechamento:</b> R$ {{fechamentoSelecionado.valorTotal | number : '1.2-2'}}    
+<p style='text-align:center;font-family: Arial, Helvetica, sans-serif;'><b>Valor Total do Fechamento:</b> {{fechamentoSelecionado.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}    
            
 </div> 
 
@@ -129,23 +129,23 @@
              <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
                 <td style='text-align: center;'>{{i + 1}}</td>
                 <td>{{item.descricao}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorUnitario | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
                 <td style='text-align: center;'>{{item.qde}}</td>
-                <td style='text-align: right;padding-right:5px'>R$ {{item.valorTotal | number : '1.2-2'}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
              </tr> 
              <tr height="20" style='border-bottom:1px solid #ccc;'>
                 <td  colspan='4'><b>Valor Total</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                 
             <tr>
             <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
                 <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal - pedido.valorLiquido | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal - pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
                    
             </tr> 
             <tr height="20" *ngIf="pedido.desconto > 0">
                 <td colspan='4'><b>Valor Total Líquido</b></td>
-                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorLiquido | number : '1.2-2'}}</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</b></td>
                     
             </tr>      
         </table>
@@ -153,7 +153,7 @@
     </div>    
     <br>
     <br>
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> R$ {{entregaSelecionada.totalEntrega | number : '1.2-2' }}</div>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b>  {{entregaSelecionada.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
     <div *ngIf="!entregaSelecionada.recebedor">
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
 
@@ -212,7 +212,7 @@
                         </tr>  
                         <tr *ngFor="let pagamentoEfetuado of pagamentosEfetuados"> 
                             <td style='text-align:center'>{{pagamentoEfetuado.dataPagamento | date:'dd/MM/yyyy' }}</td>
-                            <td style='text-align:center'> R$ {{pagamentoEfetuado.valor | number : '1.2-2' }}</td>
+                            <td style='text-align:center'>  {{pagamentoEfetuado.valor | currency:'BRL':'symbol':'0.2-2':'pt' }}</td>
                             <td>{{pagamentoEfetuado.obs}}</td> 
                         </tr>    
                     </table>    
