--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Detalhe</a>
+    <a class="navbar-brand" [routerLink]="['/home/inicioHome']">Detalhe</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,9 +24,10 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir Pedido </a>
-            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos em Aberto</a>
+            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos Abertos</a>
             <a class="dropdown-item" [routerLink]="['/home/entregas']">Entregas</a>
             <a class="dropdown-item" [routerLink]="['/home/fechamentos']">Fechamento</a>
+            <a class="dropdown-item" [routerLink]="['/home/statusPedidos']">Status Consolidado</a>
           </div>
         </li>
         <li class="nav-item">
