--- a/src/app/home/confirm-entrega/confirm-entrega.component.html
+++ b/src/app/home/confirm-entrega/confirm-entrega.component.html
@@ -74,6 +74,9 @@
     </div>    
     <br>
     <br>
+
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Observações:</b> {{obs }}</div>
+
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> {{totalEntrega |currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
 
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
