--- a/src/app/home/inicio-home/inicio-home.component.html
+++ b/src/app/home/inicio-home/inicio-home.component.html
@@ -19,8 +19,8 @@
     <br>
     <table style='width:400px !important;margin: auto;'>
         <tr>
-            <td width='50%' style='padding:10px'><button class='btn btn-info' [routerLink]="['/home/fechamentos']">Fechamentos</button></td>
-            <td style='padding:10px'><button class='btn btn-info' [routerLink]="['/home/statusPedidos']">Status Consolidado</button></td>
+            <td width='50%' style='padding:10px;text-align: right;'><button class='btn btn-info' [routerLink]="['/home/fechamentos']">Fechamentos</button></td>
+            <td style='padding:10px;text-align: left;'><button class='btn btn-info' [routerLink]="['/home/statusPedidos']">Status Consolidado</button></td>
         </tr>
     </table>        
     </div>    
