--- a/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
+++ b/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
@@ -1,7 +1,9 @@
 
 
-<ng-template #content  let-modal>
+<ng-template #content  let-modal id='modalPedido'>
+    <div #content2>
     <div class="modal-header">
+      
       <h4 class="modal-title">Pedido nº {{pedidoSelecionado.id}}</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
@@ -80,11 +82,14 @@
     </tr>
     </table>
     <br>  
-    </div>    
+    </div> 
+  </div>   
     <div class="modal-footer">
      
       <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Fechar</button>
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')" [elementToPrint]="content2" ngPrint>Imprimir</button>
     </div>
+    
 </ng-template>
 
 <ng-template #conferenciaEntrega  let-modal>
