--- a/src/app/home/pedido-fechado/pedido-fechado.component.html
+++ b/src/app/home/pedido-fechado/pedido-fechado.component.html
@@ -11,7 +11,16 @@
 </div>
 <div class="col-md-8">
     <div style='padding:15px; text-align: center; border:1px solid #000;width:600px' id='caixaPedidoFechado'>
-    <div style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#0000cc'><b>PEDIDO nº {{pedidoFechado.id}}</b></div>
+    
+    <table style='width: 590px !important;margin: auto;'>
+        <tr>
+            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>PEDIDO nº {{pedidoFechado.id}} </b></td>
+        </tr>        
+    </table>
+    
+    
+    
     <br>
     
     
