--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,6 +20,17 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Consultas
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" [routerLink]="['/home/consultaPedidos']">Pedidos</a>
+            <a class="dropdown-item" href="#">Entregas</a>
+            <a class="dropdown-item" href="#">Fechamento</a>
+          </div>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Pedidos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
