--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,10 +14,15 @@
     <br>
     <div class="alert alert-danger"  id="caixaMsgErro">Login/Senha Incorretos ou problemas de acesso</div>
     <div class="alert alert-info"  id="caixaMsgAguardar">Aguarde um momento</div>
+    
     <button class="btn btn-primary" (click)="submitForm()" [disabled]='submited' >ACESSAR</button>
+    <br><br>
+    <div style='text-align: center;font-size: 7pt;'>Versão: 02/03/2020 - 17:15</div>
     </form>
     
   </div>
+<br>
+<br>
 
 
 
