--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,7 +49,7 @@
   </nav>
   <div id='nomeUsuario'><b>Usuário(a)</b>: {{dadosIniciais.nomeUsuario}}</div>
   <div class="container">
-    
+  <div class="alert alert-info" id='divAguardarDados' style='margin-top:30px'>Aguarde enquanto os dados estão sendo carregados</div> 
   <router-outlet></router-outlet>
   </div>
   
